fixed overflow

--- a/src/assets/styles/general.scss
+++ b/src/assets/styles/general.scss
@@ -12,4 +12,5 @@
 body{
     background-color: $bg-primary;
     font-family: 'Quicksand', sans-serif;
+    overflow-x: hidden;
 }
